--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,10 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,600,700);
 @import url(https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css);
 html,
 body {
     width: 100%;
     height: 100%;
     margin: 0;
+    line-height: 1.5;
+    font-size: 15px;
+    font-weight: 400;
+    -webkit-overflow-scrolling: touch;
 }
 
 *,
@@ -25,17 +29,292 @@ body {
     background: -o-linear-gradient(45deg, #754ae5, #53c2fa);
     background: linear-gradient(45deg, #754ae5, #53c2fa);
     font-family: "Roboto", sans-serif;
-    height: 100%;
 }
 
 .container {
-	height: 100%;
-	width: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    width: 100%;
+    padding: 15px;
 }
 
+nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 15px;
+    background: white;
+    border-radius: 4px;
+}
 
-@media(max-width: 480px) {
+nav ul a {
+    margin-right: 15px;
+    color: #5d5a58;
+    font-size: 18px;
+    text-decoration: none
+}
+
+nav ul a.active {
+    color: #53c2fa;
+}
+
+.toggler {
+    color: #A1A1A4;
+    font-size: 24px;
+    margin-left: 8px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.toggler.active {
+    color: #53c2fa;
+}
+
+.surveys {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.survey-item {
+    display: block;
+    margin-top: 10px;
+    padding: 20px;
+    border-radius: 2px;
+    background: white;
+    box-shadow: 0 2px 1px rgba(170, 170, 170, 0.25);
+}
+
+.survey-name {
+    font-weight: 400;
+}
+
+.list .survey-item {
+    position: relative;
+    padding: 0;
+    font-size: 14px;
+    line-height: 40px;
+}
+
+.list .survey-item .pull-right {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+@media screen and (max-width: 800px) {
+    .list .survey-item .stage:not(.active) {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .list .survey-item .survey-progress-bg {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .list .survey-item .pull-right {
+        position: static;
+        line-height: 20px;
+        padding-bottom: 10px;
+    }
+}
+
+.list .survey-country,
+.list .survey-progress,
+.list .survey-end-date {
+    color: #A1A1A4;
+}
+
+.list .survey-country,
+.list .survey-end-date,
+.list .survey-name,
+.list .survey-stage {
+    margin: 0 10px;
+}
+
+.list .survey-country {
+    margin-right: 0;
+}
+
+.list .survey-end-date,
+.list .survey-country,
+.list .survey-name {
+    vertical-align: middle;
+}
+
+.list .survey-end-date {
+    display: inline-block;
+    width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.survey-stage .stage {
+    display: inline-block;
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+    overflow: hidden;
+    border-radius: 50%;
+    padding: 0;
+    margin: 0 2px;
+    background: #f2f2f2;
+    text-indent: -9999px;
+    color: transparent;
+    line-height: 16px;
+}
+
+.survey-stage .stage.active {
+    background: #39b54a;
+}
+
+.list .list-only {
+    display: auto;
+}
+
+.list .grid-only {
+    display: none !important;
+}
+
+.grid .grid-only {
+    display: auto;
+}
+
+.grid .list-only {
+    display: none !important;
+}
+
+.grid .survey-item {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    height: 130px;
+    width: 250px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+@media screen and (max-width: 600px) {
+    .grid .survey-item {
+        display: block;
+        width: auto;
+        height: 150px;
+        margin: 10px auto;
+    }
+}
+
+.grid .survey-name {
+    display: block;
+    max-width: 80%;
+    font-size: 16px;
+    line-height: 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.grid .survey-country {
+    font-size: 11px;
+    line-height: 16px;
+    text-transform: uppercase;
+}
+
+.grid .survey-country,
+.grid .survey-end-date {
+    color: #A1A1A4;
+}
+
+.grid .survey-progress {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    padding: 20px;
+    border-top: 1px solid #eee;
+    font-size: 13px;
+}
+
+.grid .survey-progress-bg {
+    width: 40%;
+    display: block;
+}
+
+@media screen and (max-width: 200px) {
+    .grid .survey-progress-bg {
+        display: none;
+    }
+}
+
+.grid .survey-progress-labels {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+}
+
+@media screen and (max-width: 200px) {
+    .grid .survey-progress-labels {
+        right: auto;
+        left: 10px;
+    }
+}
+
+.grid .survey-progress-label {
+    line-height: 21px;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.grid .survey-stage {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.grid .survey-stage .stage {
+    display: none;
+}
+
+.grid .survey-stage .active {
+    display: block;
+}
+
+.grid .survey-end-date {
+    font-size: 12px;
+    line-height: 20px;
+}
+
+.survey-progress-label {
+    vertical-align: middle;
+    margin: 0 10px;
+    color: #39b54a;
+}
+
+.survey-progress-label span {
+    color: gray;
+    font-size: 10px
+}
+
+.survey-progress-bg {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    width: 100px;
+    height: 4px;
+    border-radius: 2px;
+    overflow: hidden;
+    background: #eee;
+}
+
+.survey-progress-fg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    margin: 0;
+    background: #39b54a;
 }
